--- a/src/catimage/style.css
+++ b/src/catimage/style.css
@@ -11,3 +11,18 @@
     display: grid;
     justify-content: center;
   }
+
+  button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
