new update in the making

--- a/src/catimage/style.css
+++ b/src/catimage/style.css
@@ -13,7 +13,7 @@
   }
 
   button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 12px 24px;
