--- a/src/catimage/style.css
+++ b/src/catimage/style.css
@@ -1,28 +1,38 @@
+.image-container {
+  background-color: #f5f5f5;
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+}
 
-  img {
-    margin: 0% 25% 0%;
-    width: 50%;
-    height: 25%;
-    border-radius: 10px;
-    border: 5px double gray;
-  }
-  
-  .cat_information {
-    display: grid;
-    justify-content: center;
-  }
+.image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit:scale-down;
+  object-position:inherit;
+  border-radius: 5px;
+}
 
-  button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 12px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
+.image-container {
+  background-color: grey;
+  width: 600px;
+  height: 500px;
+  border-radius: 5px;
+  padding: 5%;
+}
+
+.button {
+  background-color: pink;
+  color: "#eab676";
+  border: none;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+  cursor: pointer;
+  margin: 3%;
+  border-radius: 4px;
+}
