--- a/src/catimage/style.css
+++ b/src/catimage/style.css
@@ -1,38 +1,36 @@
+.maincontent {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+}
+
 .image-container {
   background-color: #f5f5f5;
-  display: inline-block;
+  flex: 0 0 calc(50% - 20px); 
   margin: 10px;
   padding: 10px;
+  box-sizing: border-box;
+  text-align: center; 
 }
 
 .image {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit:scale-down;
-  object-position:inherit;
+  height: auto;
+  object-fit: cover;
   border-radius: 5px;
-}
-
-.image-container {
-  background-color: grey;
-  width: 600px;
-  height: 500px;
-  border-radius: 5px;
-  padding: 5%;
 }
 
 .button {
   background-color: pink;
-  color: "#eab676";
+  color: lightseagreen;
   border: none;
-  padding: 5px 5px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;
-
   cursor: pointer;
-  margin: 3%;
+  margin-top: 10px;
   border-radius: 4px;
 }
